syntax = "proto3";

option go_package = "github.com/moznion/wiregarden/grpc/messages";
option java_package = "net.moznion.wiregarden";
option java_outer_classname = "PeersProto";

service Peers {
    rpc GetPeers (GetPeersRequest) returns (GetPeersResponse);
    rpc RegisterPeers (RegisterPeersRequest) returns (RegisterPeersResponse);
    rpc DeletePeers (DeletePeersRequest) returns (DeletePeersResponse);
}

message GetPeersRequest {
    string device_name = 1;
    repeated string filter_public_keys = 2;
}

message GetPeersResponse {
    repeated Peer peers = 1;
}

message RegisterPeersRequest {
    string device_name = 1;
    repeated Peer peers = 2;
    bytes hooks_payload = 3;
}

message RegisterPeersResponse {
}

message DeletePeersRequest {
    string device_name = 1;
    repeated string public_keys = 2;
    bytes hooks_payload = 3;
}

message DeletePeersResponse {
}

enum UDPNetworkType {
    udp = 0;
    udp4 = 1;
    udp6 = 2;
}

message Peer {
    string public_key = 1;
    repeated string allowed_ips = 2;
    UDPNetworkType endpoint_udp_type = 3;
    string endpoint = 4;
    string preshared_key = 5;
    uint64 persistent_keepalive_interval_milliseconds = 6;
    uint64 protocol_version = 7;
}
